--- a/package.json
+++ b/package.json
@@ -10,13 +10,30 @@
     "dashboard": "serverless",
     "offline": "serverless offline --noPrependStageInUrl",
     "deploy": "serverless deploy",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.125",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "eslint": "^8.52.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.5.6",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier": "^3.0.3",
     "serverless-offline": "^13.2.0",
     "serverless-plugin-typescript": "^2.1.5"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1481.0",
+    "dotenv": "^16.3.1",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   }
 }
