--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.125",
+    "@types/node": "^20.8.9",
+    "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "eslint": "^8.52.0",
     "eslint-config-airbnb": "^19.0.4",
