--- a/package.json
+++ b/package.json
@@ -33,8 +33,15 @@
     "serverless-plugin-typescript": "^2.1.5"
   },
   "dependencies": {
+    "@middy/core": "^4.6.5",
+    "@middy/http-error-handler": "^4.6.5",
+    "@middy/http-event-normalizer": "^4.6.5",
+    "@middy/http-json-body-parser": "^4.6.5",
+    "@middy/validator": "^4.6.5",
     "aws-sdk": "^2.1481.0",
     "dotenv": "^16.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
