--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@middy/core": "^4.6.5",
+    "@middy/http-cors": "^4.6.5",
     "@middy/http-error-handler": "^4.6.5",
     "@middy/http-event-normalizer": "^4.6.5",
     "@middy/http-json-body-parser": "^4.6.5",
