--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.8.9",
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.52.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.5.6",
@@ -28,9 +29,15 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "prettier": "^3.0.3",
     "serverless-offline": "^13.2.0",
-    "serverless-plugin-typescript": "^2.1.5"
+    "serverless-plugin-typescript": "^2.1.5",
+    "serverless-webpack": "^5.13.0",
+    "ts-loader": "^9.5.0",
+    "typescript": "^5.2.2",
+    "webpack": "^5.89.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@middy/core": "^4.6.5",
